* time.c (v2w): Normalize a rational value to an integer if possible.   [ruby-core:58070] [Bug #9059] reported by Isaac Schwabacher.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@43473 b2dd03c8-39d4-4d8f-98ff-823fe69b080e